fix controls overlaps playlist

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -185,10 +185,11 @@ header {
 }
 
 .controls {
-  position: relative;
-  top: -48px;
+  position: absolute;
+  bottom: 0;
   height: 48px;
   box-shadow: @shadow-primary;
+  box-sizing: border-box;
   padding: 0 72px;
 
   &-seek {
